added div to show on hover with image information

--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -235,9 +235,9 @@ font-weight: 400 !;
 }
 #about {
   position: relative;
-  left: -40.5%;
+  left: -29%;
   top: -100%;
-  width: 19%;
+  width: 30%;
   height: 10%;
   text-align: left;
   float: right;
@@ -569,7 +569,7 @@ font-weight: 400 !;
   width: 50%;
   
 }
-#mail img {
+.mail img {
   max-width: 100px !important;
   max-height: auto;
   position: absolute;
@@ -579,10 +579,10 @@ font-weight: 400 !;
   filter: saturate(5%);
   transition-duration: 0.3s;
 }
-#mail:hover img {
+.mail:hover img {
   filter: saturate(100%);
 }
-#gitHub img {
+.gitHub img {
   filter: saturate(5%);
   transition-duration: 0.3s;
   cursor: pointer;
@@ -592,10 +592,10 @@ font-weight: 400 !;
   top: 200%;
   left: 50%
 }
-#gitHub:hover img {
+.gitHub:hover img {
   filter: saturate(100%);
 }
-#linkedin img {
+.linkedin img {
   padding-bottom: 800px;
   position: absolute;
   color: aqua;
@@ -608,6 +608,35 @@ font-weight: 400 !;
   filter: saturate(5%);
   transition-duration: 0.3s;
 }
-#linkedin:hover img {
+.linkedin:hover img {
   filter: saturate(100%);
 }
+#contacts {
+  position: absolute;
+  top: 200%;
+  left: 25%;
+}
+/* CSS for hover overlay divs on images */
+.hoverinfo {
+  padding: 2% 0 0 2%;
+  font-family: 'Montserrat', sans-serif;
+  align-items: baseline;
+  position: relative;
+  top: 80%;
+}
+.hovertxt { 
+  display: flex;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  /* top: 50%; */
+}
+.hovertxt:hover {
+  transition-duration: .5s;
+  transition-delay: .4s;
+  opacity: 1;
+  color: #7700c7;
+  /* background: #ff0cf31e; */
+  background-image: linear-gradient(rgba(53, 53, 53, 0.096), rgba(36, 36, 36, 0.521));
+  z-index: 2;
